Fix #29174: Vertex normals temporarily incorrect after deleting a face

Looks like it was just missed recalc_editnoormals call in Delete Mesh operator.